User-checkout-functionality (#105)
* User-checkout-functionality

* fix build
