# src/backend/services/basket.api/internal/docs/swagger.json
@@ -189,16 +189,13 @@
         "models.BasketItem": {
             "type": "object",
             "properties": {
-                "foodId": {
+                "food_id": {
                     "type": "string"
                 },
-                "foodName": {
+                "food_name": {
                     "type": "string"
                 },
-                "id": {
-                    "type": "string"
-                },
-                "oldUnitPrice": {
+                "old_unit_price": {
                     "type": "number"
                 },
                 "picture": {
@@ -207,7 +204,7 @@
                 "quantity": {
                     "type": "integer"
                 },
-                "unitPrice": {
+                "unit_price": {
                     "type": "number"
                 }
             }
@@ -252,7 +249,7 @@
         "models.CustomerBasket": {
             "type": "object",
             "properties": {
-                "customerId": {
+                "customer_id": {
                     "type": "string"
                 },
                 "items": {
