# src/backend/services/basket.api/internal/models/customer_basket.go
@@ -4,6 +4,6 @@ import "github.com/google/uuid"
 
 // CustomerBasket relationship user and basket items
 type CustomerBasket struct {
-	CustomerID uuid.UUID     `json:"customerId"`
+	CustomerID uuid.UUID     `json:"customer_id"`
 	Items      *[]BasketItem `json:"items"`
 }
