# src/backend/services/order-api/src/main/java/org/jurabek/restaurant/order/api/dtos/CustomerBasketItemDto.java
@@ -1,21 +1,0 @@
-package org.jurabek.restaurant.order.api.dtos;
-
-import java.util.UUID;
-
-import lombok.Getter;
-import lombok.Setter;
-
-/**
- * CustomerBasketItemDto
- */
-@Getter
-@Setter
-public class CustomerBasketItemDto {
-    private UUID id;
-    private UUID foodId;
-    private float unitPrice;
-    private float oldUnitPrice;
-    private int quantity;
-    private String picture;
-    private String foodName;
-}
